[gd_scene load_steps=4 format=3 uid="uid://c3dkho2rr6a5v"]

[ext_resource type="Script" uid="uid://c1gf2ahh6g233" path="res://scenes/unit_parade/unit_parade.gd" id="1_pjf2s"]
[ext_resource type="PackedScene" uid="uid://dgf2ybe2yyfqf" path="res://scenes/unit_parade/lead.tscn" id="2_eaitb"]

[sub_resource type="Curve2D" id="Curve2D_lnu2h"]
_data = {
"points": PackedVector2Array(-63.1149, 31.7379, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 2

[node name="UnitParade" type="Node2D"]
script = ExtResource("1_pjf2s")

[node name="Path" type="Path2D" parent="."]
position = Vector2(1, 0)
curve = SubResource("Curve2D_lnu2h")

[node name="Lead" parent="." node_paths=PackedStringArray("follower_path") instance=ExtResource("2_eaitb")]
follower_path = NodePath("../Path")

[node name="UnitContainer" type="Node" parent="."]

[connection signal="child_order_changed" from="Path" to="." method="_on_path_child_order_changed"]
